add Event.html; very rough atm
you can navigate to Event.html by clicking on the row in myEvents.html
with the # 1,001

--- a/css/main.css
+++ b/css/main.css
@@ -626,3 +626,15 @@ hr {
 .panel-danger > .panel-footer + .panel-collapse .panel-body {
   border-bottom-color: #ebccd1;
 }
+ .animated {
+    -webkit-transition: height 0.2s;
+    -moz-transition: height 0.2s;
+    transition: height 0.2s;
+}
+
+.stars
+{
+    margin: 20px 0;
+    font-size: 24px;
+    color: #d17581;
+}
