--- a/css/main.css
+++ b/css/main.css
@@ -654,3 +654,14 @@ hr {
   border-right-color:#ddd;
   border-width:8px;
 }
+.btn-facebook {
+  color: #fff;
+  background-color: #4C67A1;
+}
+.btn-facebook:hover {
+  color: #fff;
+  background-color: #405D9B;
+}
+.btn-facebook:focus {
+  color: #fff;
+}
